feat: grammar completeness, validation, and enum completion
Grammar Completeness:
- Add !important modifier support with full parsing and highlighting
- Add initial keyword support for property value reset
- Implement EXCLAMATION, IMPORTANT_KEYWORD, and INITIAL_KEYWORD tokens
- Create TcssInitialKeyword PSI element and IMPORTANT_MODIFIER composite element
- Update syntax highlighting: !important (grey/METADATA), initial (purple/CONSTANT)

Enhanced Validation:
- Add pseudo-class validation for all 19 valid TCSS pseudo-classes
- Implement fuzzy property name suggestions using Levenshtein distance
- Create TcssConstants.java with 10+ enum sets and fuzzy matching utility
- Add error tooltips with "Did you mean...?" suggestions and valid value lists, like Textual helpful error messages

Editor Experience Enhancements:
- Implement enum value completion for 15+ enumerated properties
- Add context-aware completion (property name vs property value detection)
- Improve Ctrl+Space support with proper offset-based context detection
- Fix completion contributor to show ONLY valid enum values (no variable contamination)

Property Catalog Expansion:
- Add 17 new properties: split, expand, text-wrap, text-overflow, constrain-x/y,
  grid-gutter-horizontal/vertical, line-pad, auto-color variants, grid-size-columns/rows, transitions
- Increase total property count to 115 (up from 98)

Cross-File Variable Resolution (v1.1):
- Implement TcssVariableIndex using ScalarIndexExtension for O(1) lookups
- Add cross-file color resolution with local shadowing semantics
- Create duplicate variable inspection with navigation quick-fix
- Add 5 example TCSS files demonstrating cross-file features
- Implement automated test framework with 5 test cases

Additional Features:
- Add color preview icons in autocomplete with adaptive borders
- Implement smart $ completion (auto-removes for colors, keeps for variables)
- Create plugin settings page for configurable completion behavior
- Update CHANGELOG.md

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -33,7 +33,18 @@
     <depends>com.intellij.modules.platform</depends>
     <depends>com.intellij.modules.python</depends>
 
+    <!-- Application services -->
     <extensions defaultExtensionNs="com.intellij">
+        <!-- Plugin settings -->
+        <applicationService
+            serviceImplementation="io.textual.tcss.settings.TcssPluginSettings"/>
+
+        <!-- Settings page -->
+        <applicationConfigurable
+            parentId="language"
+            instance="io.textual.tcss.settings.TcssSettingsConfigurable"
+            id="io.textual.tcss.settings"
+            displayName="Textual CSS"/>
         <!-- Register .tcss file type -->
         <fileType 
             name="Textual CSS" 
@@ -98,6 +109,18 @@
 
         <!-- Variable rename processor -->
         <renamePsiElementProcessor implementation="io.textual.tcss.refactoring.TcssVariableRenameProcessor"/>
+
+        <!-- Variable index for cross-file resolution -->
+        <fileBasedIndex implementation="io.textual.tcss.index.TcssVariableIndex"/>
+
+        <!-- Duplicate variable inspection -->
+        <localInspection
+            language="TCSS"
+            displayName="Duplicate variable declaration"
+            groupName="TCSS"
+            enabledByDefault="true"
+            level="WARNING"
+            implementationClass="io.textual.tcss.inspection.TcssDuplicateVariableInspection"/>
     </extensions>
 
     <actions>
