feat: rich property documentation from Textual docs
Phase 2 of documentation enhancements - extracts comprehensive
property documentation from official Textual markdown files at build time.

**Automated documentation extraction:**
- Created Gradle task `generateTcssDocumentation` that parses Textual docs
- Automated docs download/update via git sparse checkout
- Extracts 5 sections: syntax, CSS examples, Python examples, enum
  descriptions, and related properties (see also)
- Generates static Java code with zero runtime overhead

**Rich property documentation (46 properties):**
- Syntax with clickable type links (e.g., <color>, <scalar>)
- CSS examples with comments showing real usage patterns
- Python API examples demonstrating programmatic usage
- Related properties (see also) with clickable links
- Enum value descriptions from Textual's markdown tables

**Enhanced completions:**
- Enum value completions now show rich descriptions from Textual docs
- Example: "block — Display the widget as normal." instead of generic
  "block — valid for display"

**Smart URL generation:**
- Only generates links for properties/types with actual documentation
- Correct URL format using underscores (box_sizing not box-sizing)
- Generated files: TcssPropertyDocumentation.java, TcssCssTypeUrls.java,
  TcssAvailableProperties.java

**Coverage:**
- 46 properties with full documentation (syntax + examples)
- 7 properties with enum value descriptions
- 17 CSS types with documentation URLs
- 45 properties with clickable documentation links

--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,9 @@ temp_lab_repos/
 .agent_runs/
 *.agent.log
 
+# Textual documentation (auto-downloaded)
+misc/textual_docs/
+
 # Agent documentation
 Agent*.md
 CLAUDE*.md
